# site

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  Startup.cs  _Imports.razor  package-lock.json  package.json  pyproject.toml  svelte.config.js  tailwind.config.cjs
Data/: WeatherForecast.cs  WeatherForecastService.cs
Pages/: Error.cshtml  Error.cshtml.cs  FetchData.razor  _Host.cshtml
Properties/: launchSettings.json
Shared/: NavMenu.razor
backend/: Cargo.toml  README.md  wrangler.toml
backend/src/: lib.rs
frontend/: package-lock.json  package.json
src/: app.py  gh_api.py  parse_md.py
src/lib/: renderer.ts
src/lib/components/: BlogCard.svelte  Head.svelte  MobileNav.svelte  Navbar.svelte  Project.svelte  Tag.svelte
src/routes/: __error.svelte  __layout.svelte  about.svelte  index.svelte  projects.svelte
src/routes/blog/: [slug].json.ts  [slug].svelte  index.json.ts  index.svelte  index.ts
src/static/styles/: projects.css  stylesheet.css
src/templates/: 404.html  about.html  base.html  index.html  projects.html
static/admin/: config.yml
static/posts/: 1992-12-31-helloworld.md  2022-04-08-first-post.md  2022-04-10-asjdah.md
