[tool.poetry]
name = "site"
version = "0.1.0"
description = ""
authors = ["anand2312 <anandkrishna2312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
Markdown = "^3.3.4"
Jinja2 = "^3.0.1"
aiofiles = "^0.7.0"
uvicorn = "^0.14.0"
gunicorn = "^20.1.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pre-commit = "^2.13.0"
taskipy = "^1.8.1"

[tool.taskipy.tasks]
dev-server = "poetry run uvicorn --reload src.app:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
